[gd_scene load_steps=2 format=3 uid="uid://bjk4tg8oxgfhs"]

[ext_resource type="Script" path="res://scripts/BattleTest.gd" id="1_battle_test"]

[node name="BattleTest" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_battle_test")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.3, 0.2, 0.4, 1)

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.1
anchor_right = 0.5
anchor_bottom = 0.1
offset_left = -100.0
offset_top = -25.0
offset_right = 100.0
offset_bottom = 25.0
text = "測試戰鬥"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelList" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.3
anchor_right = 0.5
anchor_bottom = 0.7
offset_left = -200.0
offset_top = -100.0
offset_right = 200.0
offset_bottom = 100.0

[node name="LevelListTitle" type="Label" parent="LevelList"]
layout_mode = 2
text = "選擇關卡："
horizontal_alignment = 1

[node name="LevelScrollContainer" type="ScrollContainer" parent="LevelList"]
layout_mode = 2
size_flags_vertical = 3

[node name="LevelButtonContainer" type="VBoxContainer" parent="LevelList/LevelScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BackButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -50.0
offset_right = 100.0
offset_bottom = -20.0
text = "返回"

[node name="RefreshButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -50.0
offset_right = -20.0
offset_bottom = -20.0
text = "重新整理"